WIP: edited _includes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Red Sea Techies</div>
-                <div class="intro-heading">a learning community for tech enthusiasts and change makers</div>
+                <div class="intro-heading">code for the better > together</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
