--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,9 +4,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Come share, learn, and build for a better community.</h3>
                 </div>
             </div>
+<!--
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
@@ -76,5 +77,6 @@
                     </ul>
                 </div>
             </div>
-        </div>
+      -->
+	  </div>
     </section>
