--- a/_includes/team.html
+++ b/_includes/team.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Group</h2>
-                    <h3 class="section-subheading text-muted">Students and community members.</h3>
+                    <h3 class="section-subheading text-muted">willing students and community members</h3>
                 </div>
             </div>
             <div class="row">
@@ -26,7 +26,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">Interested? Join us.</p>
                 </div>
             </div>
         </div>
