--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Goals</h2>
-                    <h3 class="section-subheading text-muted">discuss and share ideas and know-how for a better community</h3>
+                    <h3 class="section-subheading text-muted">Discuss and share ideas and know-how for a better community</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -14,7 +14,7 @@
                         <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Share</h4>
-                    <p class="text-muted">showcase your hobbies and skills with other enthusiasts</p>
+                    <p class="text-muted">Showcase your hobbies and skills with other enthusiasts</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -22,7 +22,7 @@
                         <i class="fa fa-book fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Learn</h4>
-                    <p class="text-muted">discover unmet needs in the community</p>
+                    <p class="text-muted">Discover unmet needs in the community</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -30,7 +30,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Build</h4>
-                    <p class="text-muted">make the change you want to see together</p>
+                    <p class="text-muted">Make the change you want to see together</p>
                 </div>
             </div>
         </div>
