--- a/_includes/team.html
+++ b/_includes/team.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Group</h2>
-                    <h3 class="section-subheading text-muted">willing students and community members</h3>
+                    <h3 class="section-subheading text-muted">Willing students and community members</h3>
                 </div>
             </div>
             <div class="row">
