--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Goals</h2>
-                    <h3 class="section-subheading text-muted">Discuss and share ideas and know-how for a better community</h3>
+              <!--      <h3 class="section-subheading text-muted">Discuss and share ideas and know-how for a better community</h3> -->
                 </div>
             </div>
             <div class="row text-center">
