--- a/_includes/team.html
+++ b/_includes/team.html
@@ -26,7 +26,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Interested? Join us.</p>
+                    <p class="large text-muted">Interested?</p>
                 </div>
             </div>
         </div>
