WIP: change contact form

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,10 +28,10 @@
                         <a class="page-scroll" href="#about">Story</a>
                     </li> -->
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#team">Group</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Join Now!</a>
                     </li>
                 </ul>
             </div>
