--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -27,7 +27,7 @@
                                     <strong>{{ post.category }}</strong>
                                 </li>
                                 <li>Link:
-                                    <strong><a href={{ post.link }}>{{ post.link }}</a></strong>
+                                    <strong><a href={{ post.link }}>{{ post.linktag }}</a></strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
