WIP: poster bg with text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
                         <a class="page-scroll" href="#team">Group</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Join Now!</a>
+                        <a class="page-scroll" href="#contact">Join Now</a>
                     </li>
                 </ul>
             </div>
@@ -44,8 +44,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Red Sea Techies</div>
-                <div class="intro-heading">code for the better > together</div>
+                <!-- <div class="intro-lead-in">Red Sea Techies</div>
+                <div class="intro-heading">code for the better > together</div> -->
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
