--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,8 +2,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Join Now</h2>
-                    <h3 class="section-subheading text-muted">"Join the [Geek] Force, Luke."</h3>
+                    <h2 class="section-heading">"Join the Force, Luke."</h2>
+                    <!-- <h3 class="section-subheading text-muted"></h3> -->
                 </div>
             </div>
             <div class="row">
