WIP: revert color, remove team

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,10 +26,10 @@
                     </li>
                <!--     <li>
                         <a class="page-scroll" href="#about">Story</a>
-                    </li> -->
+                    </li>
                     <li>
                         <a class="page-scroll" href="#team">Group</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="#contact">Join Now</a>
                     </li>
@@ -44,8 +44,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <!-- <div class="intro-lead-in">Red Sea Techies</div>
-                <div class="intro-heading">code for the better > together</div> -->
+                <!-- <div class="intro-lead-in">Red Sea Techies</div> -->
+                <div class="intro-heading">code for the better > together</div>
                 <br />
                 <br />
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
