--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,7 +2,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">"Join the Force, Luke."</h2>
+                    <h2 class="section-heading">JOIN NOW</h2>
                     <!-- <h3 class="section-subheading text-muted"></h3> -->
                 </div>
             </div>
