--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,10 +44,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <!-- <div class="intro-lead-in">Red Sea Techies</div> -->
-                <div class="intro-heading">code for the better > together</div>
-                <br />
-                <br />
+                <div class="intro-lead-in"><br /><br /></div>
+                <div class="intro-heading"><br /></div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
