--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Goals</h2>
+                    <h2 class="section-heading">code for the better > together</h2>
               <!--      <h3 class="section-subheading text-muted">Discuss and share ideas and know-how for a better community</h3> -->
                 </div>
             </div>
