WIP: add new projects

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">JOIN NOW</h2>
-                    <h3 class="section-heading">Step 1: <a href = "https://www.facebook.com/groups/redseatechies">Join FB Group</a></h3>
+                    <h3 class="section-heading">Step 1: <a href="https://www.facebook.com/groups/redseatechies" target="_blank">Join FB Group</a></h3>
                     <h3 class="section-heading">Step 2: Fill this (introduce yourself)</h3>
                 </div>
             </div>
