--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,8 +44,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in"><br /><br /></div>
-                <div class="intro-heading"><br /></div>
+                <div class="intro-lead-in"><br /></div>
+                <div class="intro-heading"><br /><br /></div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
