--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,6 +32,7 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-63581228-2', 'auto');
+    ga('require', 'linkid', 'linkid.js');    
     ga('send', 'pageview');
 
   </script>
